# internal/routes/routes.go
@@ -51,6 +51,7 @@ func (a *Routes) RegisterRouters(e *gin.Engine, redisClient *redis.Client, handl
 		user.GET(":id", handlers.UserApi.Get)
 		user.POST("", handlers.UserApi.Create)
 		user.PUT(":id", handlers.UserApi.Update)
+		user.PUT(":id/reset-pwd", handlers.LoginApi.UpdatePassword)
 		user.DELETE(":id", handlers.UserApi.Delete)
 	}
 
